[gd_scene load_steps=24 format=2]

[ext_resource path="res://Menus/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/bg/bg2.jpg" type="Texture" id=4]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/ARIAL.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/UI/icons8-sort-right-100.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/next_white.png" type="Texture" id=8]
[ext_resource path="res://Objects/Ui/customSpinBox.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0, 0, 0, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0, 0, 0, 0.607843 )
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0, 0, 0, 0.607843 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0, 0, 0, 0.607843 )
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.607843 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )

[node name="Lobby" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.026
anchor_top = 0.011
anchor_right = 0.969
anchor_bottom = 0.959
margin_left = 0.498016
margin_top = 0.214033
margin_right = -0.541992
margin_bottom = -0.346008
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_left = 0.522
anchor_top = 0.5
anchor_right = 0.522
anchor_bottom = 0.5
margin_left = -297.824
margin_top = 36.2161
margin_right = 269.176
margin_bottom = 291.216
custom_styles/tab_fg = SubResource( 2 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 1 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Panel" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0
rect_min_size = Vector2( 567, 224 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="tdm" type="VBoxContainer" parent="Panel/TabContainer/Game"]
visible = false
anchor_left = 0.582
anchor_top = 0.08
anchor_right = 0.785
anchor_bottom = 0.804
margin_left = 0.00601196
margin_top = 0.0800095
margin_right = -0.0949707
margin_bottom = 22.9041
custom_constants/separation = 30
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="f_fire" type="CheckButton" parent="Panel/TabContainer/Game/tdm"]
margin_right = 115.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Game/tdm/f_fire"]
anchor_left = -2.191
anchor_top = 0.127
anchor_right = -0.635
anchor_bottom = 0.95
margin_left = -0.015686
margin_top = 0.0148277
margin_right = -33.9555
margin_bottom = -0.0201759
custom_fonts/font = ExtResource( 5 )
text = "Friendly Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_limit" parent="Panel/TabContainer/Game/tdm" instance=ExtResource( 9 )]
margin_top = 75.0
margin_right = 115.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 40 )
value = 4.0
max_value = 20.0
min_value = 2.0
increment = 2.0

[node name="Label" type="Label" parent="Panel/TabContainer/Game/tdm/time_limit"]
anchor_left = -2.191
anchor_top = -0.069
anchor_right = -0.722
anchor_bottom = 0.906
margin_left = -0.0349731
margin_top = 0.00267601
margin_right = 0.0300064
margin_bottom = 0.0026741
custom_fonts/font = ExtResource( 5 )
text = "Time Limit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_score" parent="Panel/TabContainer/Game/tdm" instance=ExtResource( 9 )]
margin_top = 145.0
margin_right = 115.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 40 )
value = 50.0
max_value = 200.0
min_value = 15.0
increment = 5.0

[node name="Label" type="Label" parent="Panel/TabContainer/Game/tdm/max_score"]
anchor_left = -2.191
anchor_top = -0.069
anchor_right = -0.722
anchor_bottom = 0.906
margin_left = -0.0349731
margin_top = 0.00267601
margin_right = 0.0300064
margin_bottom = 0.0026741
custom_fonts/font = ExtResource( 5 )
text = "Score Limit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="classic" type="VBoxContainer" parent="Panel/TabContainer/Game"]
visible = false
anchor_left = 0.582
anchor_top = 0.08
anchor_right = 0.785
anchor_bottom = 0.804
margin_left = 0.00601196
margin_top = 0.0800056
margin_right = -0.0949707
margin_bottom = -0.095932
custom_constants/separation = 30
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="f_fire" type="CheckButton" parent="Panel/TabContainer/Game/classic"]
margin_right = 115.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Game/classic/f_fire"]
anchor_left = -2.191
anchor_top = 0.127
anchor_right = -0.635
anchor_bottom = 0.95
margin_left = -0.015686
margin_top = 0.0148277
margin_right = -33.9555
margin_bottom = -0.0201759
custom_fonts/font = ExtResource( 5 )
text = "Friendly Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round_time" parent="Panel/TabContainer/Game/classic" instance=ExtResource( 9 )]
margin_top = 75.0
margin_right = 115.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 40 )
value = 2.0
max_value = 5.0
min_value = 1.0

[node name="Label" type="Label" parent="Panel/TabContainer/Game/classic/round_time"]
anchor_left = -2.191
anchor_top = -0.069
anchor_right = -0.722
anchor_bottom = 0.906
margin_left = -0.0349731
margin_top = 0.00267601
margin_right = 0.0300064
margin_bottom = 0.0026741
custom_fonts/font = ExtResource( 5 )
text = "Round Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round_count" parent="Panel/TabContainer/Game/classic" instance=ExtResource( 9 )]
margin_top = 145.0
margin_right = 115.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 40 )
value = 5.0
max_value = 20.0
min_value = 2.0

[node name="Label" type="Label" parent="Panel/TabContainer/Game/classic/round_count"]
anchor_left = -2.191
anchor_top = -0.069
anchor_right = -0.722
anchor_bottom = 0.906
margin_left = -0.0349731
margin_top = 0.00267601
margin_right = 0.0300064
margin_bottom = 0.0026741
custom_fonts/font = ExtResource( 5 )
text = "Rounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bots" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0

[node name="Control" type="Control" parent="Panel/TabContainer/Bots"]

[node name="bot_no" type="Label" parent="Panel/TabContainer/Bots/Control"]
margin_left = 10.6908
margin_top = 11.5817
margin_right = 180.691
margin_bottom = 54.5817
custom_fonts/font = SubResource( 5 )
text = "Bot Count"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="count" parent="Panel/TabContainer/Bots/Control/bot_no" instance=ExtResource( 9 )]
margin_left = 319.533
margin_top = 6.4183
margin_right = 434.533
margin_bottom = 46.4183
rect_min_size = Vector2( 0, 40 )
value = 8.0
max_value = 24.0

[node name="bot_difficulty" type="Label" parent="Panel/TabContainer/Bots/Control"]
margin_left = 10.6908
margin_top = 84.7487
margin_right = 233.691
margin_bottom = 127.749
custom_fonts/font = SubResource( 5 )
text = "Bot Difficulty"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Panel/TabContainer/Bots/Control/bot_difficulty"]
margin_left = 319.533
margin_top = 1.44086
margin_right = 462.533
margin_bottom = 47.4409
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 5 )
custom_constants/hseparation = 0
text = "2"
items = [ "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="Panel" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0
rect_min_size = Vector2( 567, 224 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Panel/TabContainer/about"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -106.0
margin_right = 277.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 5 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait" type="Panel" parent="Panel"]
anchor_left = 0.382
anchor_top = 0.126
anchor_right = 0.663
anchor_bottom = 0.433
margin_left = -0.691986
margin_top = 0.0680008
margin_right = 0.421936
margin_bottom = -0.30603
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="level_name" type="Label" parent="Panel/portrait"]
anchor_left = 0.276
anchor_top = 1.047
anchor_right = 0.721
anchor_bottom = 1.148
margin_left = 0.160011
margin_top = 0.177048
margin_right = -0.139969
margin_bottom = 0.0680695
custom_fonts/font = SubResource( 4 )
text = "LOBBY_level_name"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/portrait"]
anchor_left = 0.029
anchor_top = 0.022
anchor_right = 0.971
anchor_bottom = 0.978
margin_left = 0.139999
margin_top = -0.0600085
margin_right = -0.140015
margin_bottom = 0.0600128
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_map" type="TextureButton" parent="Panel/portrait"]
anchor_left = 0.871
anchor_top = 0.091
anchor_right = 1.43
anchor_bottom = 1.0
margin_left = 0.0841675
margin_top = 0.0699978
margin_right = 0.0241699
margin_bottom = 1.99998
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prev_map" type="TextureButton" parent="Panel/portrait"]
anchor_left = -0.424
anchor_top = 0.091
anchor_right = 0.135
anchor_bottom = 1.009
margin_left = 189.982
margin_top = 0.0699978
margin_right = 189.922
margin_bottom = -0.0700226
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mapGroup" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.078
margin_bottom = -0.196003
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="standardMaps" type="Button" parent="Panel/mapGroup"]
margin_right = 402.0
margin_bottom = 52.0
rect_min_size = Vector2( 402, 50 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
pressed = true
text = "LOBBY_standard_maps"
clip_text = true

[node name="myMaps" type="Button" parent="Panel/mapGroup"]
margin_left = 402.0
margin_right = 804.0
margin_bottom = 52.0
rect_min_size = Vector2( 402, 50 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
text = "LOBBY_my_maps"
clip_text = true

[node name="downloadedMaps" type="Button" parent="Panel/mapGroup"]
margin_left = 804.0
margin_right = 1206.0
margin_bottom = 52.0
rect_min_size = Vector2( 402, 50 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
text = "LOBBY_downloaded"
clip_text = true

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 0.02
anchor_top = 0.488
anchor_right = 0.215
anchor_bottom = 0.843
margin_left = -1.24247
margin_top = 0.16037
margin_right = 0.587524
margin_bottom = 0.050354
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Panel"]
show_behind_parent = true
anchor_top = -0.068
anchor_right = 1.0
margin_left = -0.00787354
margin_top = 0.0698624
margin_right = -0.00787354
margin_bottom = -0.386139
custom_styles/normal = SubResource( 13 )
text = "Modes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameModesList" type="ItemList" parent="Panel/Panel"]
anchor_left = 0.038
anchor_top = 0.027
anchor_right = 0.962
anchor_bottom = 0.973
margin_left = -0.00600052
margin_top = -0.0340004
margin_right = 0.00598145
margin_bottom = 0.0339813
custom_styles/bg = SubResource( 14 )
custom_fonts/font = ExtResource( 5 )
items = [ "Classic", null, false, "TDM", null, false, "Zombie Mod", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 41.0
margin_top = 40.0
margin_right = 392.0
margin_bottom = 104.0
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
anchor_left = 0.87
anchor_top = 0.844
anchor_right = 0.954
anchor_bottom = 0.919
margin_left = -0.0700684
margin_top = 0.207397
margin_right = -0.590088
margin_bottom = 0.207458
custom_fonts/font = ExtResource( 2 )
text = "MENU_start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/portrait/next_map" to="." method="_on_next_map_pressed"]
[connection signal="pressed" from="Panel/portrait/prev_map" to="." method="_on_prev_map_pressed"]
[connection signal="pressed" from="Panel/mapGroup/standardMaps" to="." method="_on_standardMaps_pressed"]
[connection signal="pressed" from="Panel/mapGroup/myMaps" to="." method="_on_myMaps_pressed"]
[connection signal="pressed" from="Panel/mapGroup/downloadedMaps" to="." method="_on_downloadedMaps_pressed"]
[connection signal="item_selected" from="Panel/Panel/gameModesList" to="." method="_on_gameModesList_item_selected"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
